@@ -245,6 +245,7 @@ Fixes:
    * Remove the keyboard area in the conformant if the keyboard state is off.
    * Fix colorselector send "changed" signal twice when pressed color bar.
    * Keep the smart members of the naviframe views whenever resize object is changed. This prevents the dangling view objects of the naviframe and keep the layer consistency.
+   * In case of scroll in scroll, the child scroller have to bounce if parents don't have a bounce.
 
 Removals:
 
